--- a/full-website/src/app/globals.css
+++ b/full-website/src/app/globals.css
@@ -2,20 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --navigation-height: 4.8rem;
+  }
+
+  html {
+    @apply bg-background font-sans text-off-white;
+    font-size: 62.5%;
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+@layer utilities {
+	.text-shadow {
+	  text-shadow: rgb(0 0 0 / 56%) 0px 3px 12px;
+	}
+  
+	.text-gradient {
+	  background: linear-gradient(to right bottom, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.38));
+	  background-clip: text;
+	  color: transparent;
+	}
+}  
